opam-version: "2.0"
maintainer: "N/A"
synopsis: "AU Compilation student project template"
description: "AU Compilation student project template" 
authors: "AU CS"
homepage: "https://cs.au.dk"
bug-reports: "N/A"
depends: ["dune" "stdio" "menhir" "alcotest" "yojson" "merlin" "fmt" "utop" "ocaml-lsp-server" "ocamlformat" "ocamlformat-rpc"]
build: ["dune" "build" "-p" name "-j" jobs]

